fix text color for dark mode primary btn

--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -121,7 +121,7 @@
   --btn-unstyled: #{$theme-aurora-dark};
   --btn-unstyled-hover: #{$theme-aurora-base};
 
-  --btn-primary-text: #{$theme-white};
+  --btn-primary-text: #{$theme-black};
 
   --btn-add-widget-border: #{$theme-spacebase-dark};
   --btn-add-widget-bg: #{$theme-spacebase-darker};
